solve mobile menu going off screen

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@
   scroll-behavior: smooth;
 }
 
-html, body {
+body {
   background-color: #000000;
   overflow-x: hidden;
 }
